--- a/SCI.ipynb
+++ b/SCI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -210,12 +210,62 @@
     "        nextPage.click()\n",
     "    for pageNum in range(pageCount-1):\n",
     "        driver.back()\n",
-    "    return titleList"
+    "    return titleList\n",
+    "\n",
+    "def parsePaperInfoDict(driver):\n",
+    "    infoDict = {}\n",
+    "    blocks  = driver.find_elements_by_class_name('block-record-info')\n",
+    "    for block in blocks:\n",
+    "        try:\n",
+    "            title3 = block.find_element_by_class_name('title3').text\n",
+    "            \n",
+    "            if title3 == 'Abstract' or title3 == 'Publisher':\n",
+    "                infoDict[title3] = block.find_element_by_class_name('FR_field').text\n",
+    "            else:\n",
+    "                fr_fields = block.find_elements_by_class_name('FR_field')\n",
+    "                for fr_field in fr_fields:\n",
+    "                    try:\n",
+    "                        fr_label = fr_field.find_element_by_class_name('FR_label').text\n",
+    "                        value = fr_field.text\n",
+    "                        infoDict[fr_label] = value[value.find(':')+1:].strip()\n",
+    "                    except NoSuchElementException , e:\n",
+    "                            print fr_field.text\n",
+    "                            print e\n",
+    "        except NoSuchElementException , e:\n",
+    "            #解析By，AEROSPACE SCIENCE AND TECHNOLOGY等不包含title3标签的元素\n",
+    "            fr_fields = block.find_elements_by_class_name('FR_field')\n",
+    "            for fr_field in fr_fields:\n",
+    "                fr_label = fr_field.find_element_by_class_name('FR_label').text\n",
+    "                value = fr_field.text\n",
+    "                infoDict[fr_label] = value[value.find(':')+1:].strip()\n",
+    "\n",
+    "    return infoDict\n",
+    "\n",
+    "def parsePaperInfoDict1(driver):\n",
+    "    infoDict = {}\n",
+    "    blocks  = driver.find_elements_by_class_name('block-record-info')\n",
+    "    for block in blocks:\n",
+    "        if not block.is_displayed(): continue\n",
+    "        fr_fields = block.find_elements_by_class_name('FR_field')\n",
+    "        for fr_field in fr_fields:\n",
+    "            if not fr_field.is_displayed(): continue\n",
+    "            fieldContent = fr_field.text\n",
+    "            pos = fieldContent.find(':')\n",
+    "            if pos != -1:\n",
+    "                infoDict[fieldContent[:pos]] = fieldContent[pos+1:].strip()\n",
+    "            else:\n",
+    "                try:\n",
+    "                    title3 = block.find_element_by_class_name('title3').text\n",
+    "                    infoDict[title3] = fieldContent\n",
+    "                except NoSuchElementException , e:\n",
+    "                    print block.text\n",
+    "                    print e\n",
+    "    return infoDict\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -227,7 +277,30 @@
       "Web of Science [v.5.18] - All Databases Home\n",
       "Web of Science [v.5.18] - All Databases Results\n",
       "records in total:  4\n",
-      "total page number:  1\n"
+      "total page number:  1\n",
+      "no reference\n",
+      "save to mysql, not implement yet\n",
+      "title          : Trajectory analysis for vertical takeoff and vertical landing reusable launch vehicle's upper stage\n",
+      "citedTimes     : 0\n",
+      "fromUrl        : http://apps.webofknowledge.com/full_record.do?product=UA&search_mode=GeneralSearch&qid=2&SID=1DWhfck1pyCB6ONRpmr&page=1&doc=4\n",
+      "referenceList  : []\n",
+      "abstract       : Reusable launch vehicles are a ... ns for the VTVL suborbital RLV\n",
+      "conference     : \n",
+      "author         : unjun Xu\n",
+      "publish_time   : Jan. 2009  \n",
+      "current_time   : 2015-08-03 10:22:37\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "global name '__init__' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-33-e347e05db00e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     86\u001b[0m         \u001b[0mpaperInfo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msaveToMysql\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m         \u001b[0;32mprint\u001b[0m \u001b[0mpaperInfo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 88\u001b[0;31m         \u001b[0mpaperInfo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     89\u001b[0m         \u001b[0mdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-29-5f5faee1d5ff>\u001b[0m in \u001b[0;36mreset\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    128\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcurrent_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'%Y-%m-%d %H:%M:%S'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    129\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mreset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 130\u001b[0;31m         \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    131\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__str__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    132\u001b[0m         \u001b[0mshortAbstract\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabstract\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m' ... '\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabstract\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m31\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabstract\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;36m60\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabstract\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: global name '__init__' is not defined"
      ]
     }
    ],
@@ -330,7 +403,7 @@
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -462,7 +535,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "driver.get('http://apps.webofknowledge.com/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "chooseEnglishLanguage()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "form = driver.find_element_by_name(\"value(input1)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "form.clear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "form.send_keys('suborbital reusable launch vehicle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "form.submit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "xpath = '//*[@id=\"RECORD_1\"]/div[3]/div[1]/div/a'\n",
+    "firstResultLink = WebDriverWait(driver,60).until(EC.presence_of_element_located((By.XPATH,xpath)))\n",
+    "firstResultLink.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conference   :   6th IAASS Conference. Safety is Not an Option\n",
+      "International Patent Classification   :   B64F1/00 Ground or aircraft-carrier-deck installations; B64G1/00 Cosmonautic vehicles; B64G1/24 Guiding or controlling apparatus, e.g. for attitude control; G05D1/00 Control of position, course, altitude, or attitude of land, water, air, or space vehicles, e.g. automatic pilot; G05D13/00 Control of linear speed; Control of angular speed; Control of acceleration or deceleration, e.g. of a prime mover; G08G5/06 for control when on the ground\n",
+      "ISBN   :   978-92-9092-279-7\n",
+      "Editor Address   :   Ouwehand, L.; ESTEC, ESA, Noordwijk, Netherlands.\n",
+      "Author Address   :   Zakaria, N.R.; Nasrun, N.; Spaceport Malaysia, Kuala Lumpur, Malaysia.\n",
+      "Location   :   Montreal, QC, Canada\n",
+      "Controlled Indexing   :   aerospace control; airports; entry, descent and landing (spacecraft); environmental factors; space vehicles; velocity control\n",
+      "Date   :   21-23 May 2013\n",
+      "By   :   Zakaria, N.R.; Nasrun, N.; Zulkifli, M.R.; Yamin, M.I.; Othman, J.; Zakaria, N.R.\n",
+      "Publisher   :   ESA Communications, Noordwijk, Netherlands\n",
+      "Language   :   English\n",
+      "Accession Number   :   INSPEC:14636622\n",
+      "Classification Code(s)   :   B7650A Airport and airbase operations; B0170Q Environmental factors; C3360L Aerospace control; C3120E Velocity, acceleration and rotation control; C7460 Aerospace engineering computing\n",
+      "Number of References   :   1\n",
+      "Published   :   2013\n",
+      "Research Areas   :   Engineering; Automation & Control Systems; Computer Science (provided by Thomson Reuters)\n",
+      "Uncontrolled Indexing   :   seaborne spaceport; aviation authorities; automated landing system; robotic suborbital vehicle; vectoring nozzle; passenger cabin; velocity control; suborbital vehicle; robotic technology; green technology; suborbital low cost and low risk vehicle to the edge of space; SOLVES; Spaceport Malaysia planning\n",
+      "Edited by   :   Ouwehand, L.\n",
+      "Abstract   :   Inclusive in the planning of Spaceport Malaysia are 2 local suborbital vehicles development. One of the vehicles is called SOLVES or Suborbital Low Cost and Low Risk Vehicle to the Edge of Space. The emphasis on the design and operation of SOLVES is green and robotic technology, where both green technology and robotic technology are used to protect the environment and enhance safety. As SOLVES climbs, its center of gravity stabilizes and remains at the bottom as its propellant being used until it depletes, due to the position of the vehicle's passenger cabin and its engines at its lower end. It will reach 80km from sea level generally known as ldquothe edge of spacerdquo due to its momentum although its propellant will be depleted at a lower altitude. As the suborbital vehicle descends tail first, its wings automatically extend and rotate at horizontal axes perpendicular to the fuselage. These naturally and passively rotating wings ensure controlled low velocity and stable descend of the vehicle. The passenger cabin also rotates automatically at a steady low speed at the centerline of its fuselage as it descends, caused naturally by the lift force, enabling its passengers a surrounding 360 degrees view. SOLVES is steered automatically to its landing point by an electrical propulsion system with a vectoring nozzle. The electrical propulsion minimizes space and weight and is free of pollution and noise. Its electrical power comes from a battery aided by power generated by the naturally rotating wings. When the vehicle lands, it is in the safest mode as its propellant is depleted and its center of gravity remains at the bottom of its cabin. The cabin, being located at the bottom of the fuselage, enables very convenient, rapid and safe entry and exit of its passengers. SOLVES will be a robotic suborbital vehicle with green technology. The vehicle will carry 4 passengers and each passenger will be trained to land the vehicle manually if the fully automated landing system fails and therefore it will be engineered for simple operation by trained passengers. However, for certification by aviation authorities the vehicle may be operational with 3 passengers and a pilot. A specific operation considered for SOLVES is naval operation where the suborbital vehicle will be operating from a seaborne spaceport, probably a superyacht with spacepad for the vertical launching and landing of the vehicle. Such naval operation enables the vehicle to fly above exotic locations reachable by sea. SOLVES is also planned for further development into reusable rocket booster to carry small suborbiter to 160km from sea level, enables the passengers aboard the suborbiter to experience longer zero gravity time and more effective suborbital flight.\n",
+      "Pages   :   464-71\n",
+      "Sponsor(s)   :   Eur. Space Agency\n",
+      "Document Type   :   Conference Paper\n",
+      "Treatment   :   Practical\n"
+     ]
+    }
+   ],
+   "source": [
+    "infodict = parsePaperInfoDict1(driver)\n",
+    "for key in infodict:\n",
+    "    print key+'   :   '+infodict[key]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "from selenium.webdriver.support.expected_conditions import element_to_be_clickable\n",
+    "referenceXpath = '//*[@id=\"records_form\"]/div/div/div/div[2]/div[2]/div/div/p[2]'\n",
+    "reference = driver.find_element_by_xpath(referenceXpath)\n",
+    "referenceCount = int(reference.text.split(' ')[0])\n",
+    "print referenceCount\n",
+    "if referenceCount != 0 :\n",
+    "    reference.click()\n",
+    "    driver.back()\n",
+    "else:\n",
+    "    print 'no'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
